fix: spacing around avatars in reaction details dialog

--- a/packages/frontend/src/components/dialogs/ReactionsDialog/styles.module.scss
+++ b/packages/frontend/src/components/dialogs/ReactionsDialog/styles.module.scss
@@ -18,7 +18,7 @@
 
 .reactionsDialogAvatar {
   flex: 0 0 48px;
-  margin-right: 10px;
+  margin-inline: 10px;
 }
 
 .reactionsDialogContactName {
